terraform/producer/vpc.tf
# The Private Network for Project B
resource "google_compute_network" "producer_vpc" {
  name                    = "commit-vpc-producer"
  auto_create_subnetworks = false
}

# Subnet for GKE Nodes and Pods
resource "google_compute_subnetwork" "gke_subnet" {
  name          = "commit-subnet-gke"
  ip_cidr_range = "10.10.0.0/20"  # Nodes get IPs from here
  region        = var.region
  network       = google_compute_network.producer_vpc.id

  # Secondary ranges for Pods and Services (GPC Native VPC)
  secondary_ip_range {
    range_name    = "pods"
    ip_cidr_range = "10.48.0.0/14"
  }
  secondary_ip_range {
    range_name    = "services"
    ip_cidr_range = "10.52.0.0/20"
  }
}

# Subnet Specially for PSC (The "Trick" Requirement)
# This is where the NAT happens for the Service Attachment
resource "google_compute_subnetwork" "psc_subnet" {
  name          = "commit-subnet-psc-nat"
  ip_cidr_range = "10.2.0.0/28"
  region        = var.region
  network       = google_compute_network.producer_vpc.id
  purpose       = "PRIVATE_SERVICE_CONNECT"
}

# AUTOMATE THE FIREWALL RULE
resource "google_compute_firewall" "allow_health_checks" {
  name    = "allow-health-checks"
  network = google_compute_network.producer_vpc.name
  project = var.project_id

  allow {
    protocol = "tcp"
    ports    = ["443"]
  }

  source_ranges = ["130.211.0.0/22", "35.191.0.0/16"]
  direction     = "INGRESS"
}

# Allow IAP to SSH into nodes for debugging
resource "google_compute_firewall" "allow_iap_ssh" {
  name    = "allow-iap-ssh"
  network = google_compute_network.producer_vpc.name
  project = var.project_id

  allow {
    protocol = "tcp"
    ports    = ["22"]
  }

  # This is the standard Google IAP range
  source_ranges = ["35.235.240.0/20"]
  direction     = "INGRESS"
}
